--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "dashboard prototype js",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp sass js"
   },
   "author": "ab@buerodespraesidenten.de",
   "license": "ISC",
