--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp sass js"
+    "build": "gulp sass js includeHTML"
   },
   "author": "ab@buerodespraesidenten.de",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-bro": "^2.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglifycss": "^1.1.0",
