--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ab@buerodespraesidenten.de",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
@@ -21,6 +22,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-uglifycss": "^1.1.0",
     "gulp-watch": "^5.0.1",
-    "sass": "^1.38.0"
+    "sass": "^1.38.0",
+    "vue": "^2.6.14"
   }
 }
